# capstone-project

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: __main__.txt  logging.ini  main.py
app/model/: business_partner.py
app/routers/: gp.py
